--- a/css/foundation.css
+++ b/css/foundation.css
@@ -2955,7 +2955,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  /* font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;*/
   font-weight: 300;
   font-style: normal;
   color: #222222;
