--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   height: 800px !important;
 }
 
+.reveal-modal-bg {
+  background: rgba(0, 0, 0, 0.75);
+}
+
 /************
 GLOBAL 
 *************/
